--- a/view/admin/mainAdmin-storyTag.html
+++ b/view/admin/mainAdmin-storyTag.html
@@ -503,6 +503,102 @@ select::-ms-expand{
     border-color: #82a593;
 }
 
+
+
+
+.hiddenRow {
+    padding: 0 !important;
+}
+
+
+
+
+#marker {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transition: all 0.1s ease-in-out;
+}
+
+#marker:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+#marker:hover #markerMessage{
+    display:block;
+    transform-origin: 100% 0%;
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+#marker #markerMessage{
+    display: none;
+    text-align: left;
+    background-color: #fff5e2a1;
+    padding: 8px;
+    padding-top: 15px;
+    width: 300px;
+    position: absolute;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgba(248, 139, 14, 0.418);
+    right: -120px;
+    top: 50px;
+    color: rgb(197, 99, 99);
+    font-size: 13px;
+    line-height: 1.4;
+}
+
+#marker #markerMessage:before{
+    position: absolute;
+    content: '';
+    width:0;
+    height: 0;
+    border:6px solid transparent;
+    border-bottom-color:#F4744C;
+    right:134px;
+    top:-12px;
+}
+
+#marker #markerMessage:after{
+    width:100%;
+    height:40px;
+    content:'';
+    position: absolute;
+    top:-40px;
+    left:0;
+}
+
+@-webkit-keyframes fadeIn {
+    0% { 
+        opacity:0; 
+        transform: scale(0.6);
+    }
+    100% {
+        opacity:100%;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:100%; }
+}​ 
+
+
+
+
+
+
+
+
+
+
 </style>
 
 </head>
@@ -612,33 +708,27 @@ select::-ms-expand{
         <!-- 테이블박스 -->
         <div class="table_wrap" id="table1">
             <div class="head_tab">
-                <div class="custom-checkbox mx-5 my-3" id="checkbox_all">
-                    <input type="checkbox" class="custom-control-input" id="cb">
-                    <label for="cb" class="custom-control-label"></label>
-                    <span>전체체크</span>
-                </div>
+                
                 <div class="select_status">
                     <label for="sele1"><select name="dly_status" id="sele1">
                         <option>-작성상태-</option>
                         <option value="1">입력대기</option>
                         <option value="2">입력완료</option>
                     </select><i class="fas fa-sort-down"></i></label>
-
-                    <button type="button" class="tab_btn">변 경</button>
                 </div>
             </div>
 
             <table class="table table-hover text-center">
                 <colgroup>
-                    <col width="56"><col width="180"><col width="86"><col width="410">
-                    <col width="auto"><col width="80"><col width="86"><col width="90">
-                    <col width="160">
+                    <col width="56"><col width="120"><col width="86"><col width="86">
+                    <col width="390"><col width="auto"><col width="80"><col width="86">
+                    <col width="90"><col width="160">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th>체크</th><th>게시글번호</th><th>작성상태</th><th>제목</th>
-                        <th>내용</th><th>작성자</th><th>조회수</th><th>좋아요 수</th>
-                        <th>작성일</th>
+                        <th>번호</th><th>게시글번호</th><th>작성상태</th><th>태그 수</th>
+                        <th>제목</th><th>내용</th><th>작성자</th><th>조회수</th>
+                        <th>좋아요 수</th><th>작성일</th>
                     </tr>
                 </thead>
                 <tbody id="storyTagList">
@@ -754,7 +844,18 @@ $(document).ready(function() {
         }   
     });
 
+
+    $('div[name=itemDetail]').hide();
+
+
 });
+
+// 금액 콤마 삽입 정규식
+function makeComma(str) {
+    str = String(str);
+    return str.replace(/(\d)(?=(?:\d{3})+(?!\d))/g, '$1,');
+};
+
 
 function autoCheck() {
     let chkLength = $('input:checkbox[name="chk"]');
@@ -803,33 +904,79 @@ function getStoryTagList() {
 
                     seq = val.cardSeq;
                     
-                    app +=   '<tr>'
-                        +    '<td>'
-                        +    '<div class="custom-checkbox">'
-                        +    '<input type="checkbox" class="custom-control-input" id="'+(i+1)+'" name="chk">'
-                        +    '<label for="'+(i+1)+'" class="custom-control-label"></label>'
-                        +    '</div>'
-                        +    '</td>'
-                        +    '<td>'+val.cardSeq+'</td>'
+                    app +=   '<tr data-toggle="collapse" data-target="#collapse'+(i+1)+'" class="accordion-toggle" seq="'+seq+'">'
+                        +    '<td>'+(i+1)+'</td>'
+                        +    '<td id="cardSeq_'+(i+1)+'">'+val.cardSeq+'</td>'
                         +    '<td>';
 
-                    if(val.productSeq != 0) {
+                    if(val.tagCount != 0) {
                         app += '입력완료';
                     } else {
                         app += '입력대기';                    
                     }
 
                     app +=   '</td>'
+                        +    '<td>'+val.tagCount+'</td>'
                         +    '<td>'+val.cardTitle+'</td>'
                         +    '<td>'+val.cardContent+'</td>'
                         +    '<td>'+val.nickName+'</td>'
                         +    '<td>'+val.cardReadCount+'</td>'
                         +    '<td>'+val.likeCount+'</td>'
                         +    '<td>'+moment(val.cardDate).format("LLL")+'</td>'
+                        +    '</tr>'
+                        +    '<tr>'
+                        +    '<td colspan="10" class="hiddenRow"><div id="collapse'+(i+1)+'" class="accordian-body collapse">'
 
 
 
+                        +'<div class="row" style="margin: 20px 0px;">'
+                        +    '<div class="col">'
+                        +        '<div class="row" style="height: 50px; margin:20px 0px;">'
+                        +            '<div class="col d-flex justify-content-center align-items-center"><p style="font-size: 18px;"><b>1.</b> 이미지를 클릭하여 태그를 넣을 좌표를 구하세요.</p></div>'
+                        +        '</div>'
+                        +        '<div class="row" style="height: 84px;">'
+                        +            '<div class="col">가로축 : <input type="text" id="loc_x_'+(i+1)+'" style="width: 70px;">&ensp;&ensp; 세로축 : <input type="text" id="loc_y_'+(i+1)+'" style="width: 70px;"></div>'
+                        +        '</div>'
+                        +        '<div class="row" style="height: 50px; margin-top:20px 0px;">'
+                        +            '<div class="col d-flex justify-content-center align-items-center"><p style="font-size: 18px;"><b>2.</b> 등록할 상품을 선택하세요.</p></div>'
+                        +        '</div>'
+                        +        '<div class="row" style="height: 90px;">'
+                        +            '<div class="col">'
+                        +               '<select id="select_'+(i+1)+'" seq="'+(i+1)+'" name="select" class="form-select" style="width: 350px; height: 35px; margin-left: 10px;">'
+                        +                   '<option selected value="0"> 상품 선택</option>'     
+                        +                '</select>'
+                        +            '</div>'
+                        +            '<div class="col"><input type="text" id="search_'+(i+1)+'" style="width: 200px; height: 35px;">&ensp;<button seq="'+(i+1)+'" name="searchProdBtn" class="tab_btn" type="button">검색</button></div>'
+                        +        '</div>'
 
+
+                        // 상품 사진, 이름 보이는 부분
+                        +        '<div id="itemDetail_'+(i+1)+'" class="row" name="itemDetail" style="width:660px; height: 250px; margin-left:12px; padding: 25px 5px; border: 1px solid #bababa; border-radius: 3px; box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -1px rgb(140 140 140 / 45%); background-color: #bababab4;">'
+                        +            '<div class="col offset-xl-1"><img id="prod_img_'+(i+1)+'" style="width: 200px;height: 200px; border-radius: 10px; box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -1px rgb(140 140 140 / 45%);"></div>'
+                        +            '<div class="col-xl-6 d-flex d-xl-flex align-items-center justify-content-xl-center">'
+                        +                '<p id="prod_title_'+(i+1)+'" style="font-size: 25px; margin-bottom: 40px; margin-right: 50px;"></p>'
+                        +            '</div>'
+                        +        '</div>'
+
+
+
+                        +        '<div class="row" style="height: 170px;">'
+                        +            '<div class="col d-flex justify-content-center align-items-center"><button id="insertTagBtn_'+(i+1)+'" seq="'+(i+1)+'" name="insertTagBtn" class="tab_btn" type="button" style="width: 180px; height: 50px; font-size: 20px;">상품등록</button></div>'
+                        +        '</div>'
+                        +    '</div>'
+
+                        // 메인 사진
+                        +    '<div class="col" seq="'+(i+1)+'" id="userImg_'+seq+'" name="userImg">';
+
+                        /* 태그 들어가는 부분 */
+
+                    app+=        '<img width="600px" height="600px" style="width: 720px;height: 660px;" src="http://192.168.0.231:3000/upload/'+val.cardFileName+'">'
+                        +    '</div>'
+                        +'</div>'
+
+
+
+                        +    '</div></td>'
                         +    '</tr>';
 
 
@@ -845,6 +992,209 @@ function getStoryTagList() {
         }
     });
 };
+
+// 메인 이미지 클릭 (좌표 검색)
+$(document).on('click', 'div[name=userImg]', function(event) {
+    
+    let seq = $(this).attr('seq');
+    let x = event.offsetX;
+    let y = event.offsetY;
+
+    //alert('x좌표 = '+ x + ' y좌표 = ' + y);
+    $('#loc_x_'+seq).val(x);
+    $('#loc_y_'+seq).val(y);
+});
+
+
+// 상품 검색 버튼 클릭
+$(document).on('click', 'button[name=searchProdBtn]', function() {
+    let seq = $(this).attr('seq');
+    let val = $('#search_'+seq).val();
+    getSearchProductionList(val, seq);
+});
+
+
+// 상품등록 버튼 클릭
+$(document).on('click', 'button[name=insertTagBtn]', function() {
+    let seq = $(this).attr('seq');
+
+    if(confirm("해당 좌표에 상품을 등록하시겠습니까?") == true) {
+        let cardSeq = $('#cardSeq_'+seq).text();
+        let productSeq = $('#select_'+seq).val();
+        let locationX = $('#loc_x_'+seq).val();
+        let locationY = $('#loc_y_'+seq).val();
+
+        if(productSeq==0 || locationX=="" || locationY=="") {
+            alert('모든 항목을 입력해주세요.');
+            return;
+        }
+
+        $.ajax({
+            url: "http://192.168.0.231:3000/insertLocationTag",
+            type: "get",
+            data: {
+                "cardSeq":cardSeq,
+                "productSeq":productSeq,
+                "locationX":locationX,
+                "locationY":locationY
+            },
+            success: function (data) {
+                if(data=="suc") alert('등록 되었습니다.');
+            },
+            error: function (data) {
+                alert('insertLocationTag error');
+            },
+            complete: function() {
+                getProductTag(cardSeq);
+            }
+        });
+    } else {
+        return;
+    }
+});
+
+//상품 선택 시
+$(document).on('change', 'select[name=select]', function() {
+    let seq = $(this).attr('seq');
+    let val = $(this).val();
+    if($(this).val() == 0) {
+        $('#itemDetail_'+seq).hide();
+        return;
+    }
+
+    $.ajax({
+        url: "http://192.168.0.231:3000/getProductImg",
+        type: "get",
+        data: {
+            "productSeq": val
+        },
+        success: function (data) {
+            $('#prod_img_'+seq).attr('src', 'http://192.168.0.231:3000/upload/'+data.productFileName);
+            $('#prod_title_'+seq).text(data.productName);
+            $('#itemDetail_'+seq).show();
+        },
+        error: function (data) {
+            alert('getProductImg error');
+        }
+    });
+});
+
+// 좌표 삭제 버튼 클릭
+$(document).on('click', 'div[name=deleteTagBtn]', function() {
+    let seq = $(this).attr('seq');
+    if(confirm("해당 좌표를 삭제하시겠습니까?") == true) {
+        let cardSeq = $(this).attr('cardSeq');
+        let productSeq = $(this).attr('productSeq');
+        $.ajax({
+            url: "http://192.168.0.231:3000/deleteTag",
+            type: "get",
+            data: {
+                "cardSeq": cardSeq,
+                "productSeq": productSeq
+            },
+            success: function (data) {
+                if(data == "suc") {
+                    alert('삭제가 완료되었습니다.');
+                }
+            },
+            error: function () {
+                alert('deleteTag error');
+            },
+            complete: function() {
+                getProductTag(cardSeq);
+            }
+        });
+    } else {
+        return;
+    }
+});
+
+
+
+//테이블 로우 클릭 시
+$(document).on('click', '.accordion-toggle', function(event) {
+
+    let cardSeq = $(this).attr('seq');
+    getProductTag(cardSeq);
+});
+
+
+
+getSearchProductionList();
+function getSearchProductionList(searchText, seq) {
+    $.ajax({
+        url: "http://192.168.0.231:3000/getSearchProductionList",
+        type: "get",
+        data: {
+            "searchText": searchText
+        },
+        success: function (list) {
+            console.log(list);
+            if(seq != null) {
+                $('#select_'+seq).children().remove();
+            }
+            $.each(list, function (i, val) {
+                let option = $('<option value="'+val.productSeq+'">'+val.productName+'</option>');
+                if(seq==null) {
+                    $('select[name=select]').append(option);
+                } else {
+                    $('#select_'+seq).append(option);
+                }
+            });
+        },
+        error: function () {
+            alert('getSearchProductionList error');
+        }
+    });
+};
+
+
+function getProductTag(cardSeq) {
+    $.ajax({
+        url: "http://192.168.0.231:3000/getProductTag",
+        type: "get",
+        data: {
+            "cardSeq": cardSeq
+        },
+        success: function (list) {
+            $('div[name=tags]').remove();
+            let tag = "";
+            console.log(list);
+            $.each(list, function (i, val) {
+                tag +=  '<div name="tags" style="position: absolute;">'
+                    +        '<div id="marker" style="position: relative; top: '+(val.locationY - 40)+'px;left: '+(val.locationX - 20)+'px;">'
+                    +            '<img src="../../assets/img/marker.png" style="width: 40px;">'
+                    +            '<div id="markerMessage">'
+                    +                '<div class="row">'
+                    +                    '<div class="col">'
+                    +                        '<img style="width: 80px;height: 80px;border-radius: 7px;margin-left: 10px; object-fit: cover;" src="http://192.168.0.231:3000/upload/' +val.productFileName+ '">'
+                    +                    '</div>'
+                    +                    '<div class="col" style="margin-left: -40px;margin-right: -10px;">'
+                    +                        '<p><b>'+val.productName+'</b></p>'
+                    +                        '<p style="font-size: 15px;"><b>'+makeComma(val.productPrice)+'원</b></p>'
+                    +                    '</div>'
+                    +                    '<div name="deleteTagBtn" cardSeq="'+val.cardSeq+'" productSeq="'+val.productSeq+'" class="col" style="margin-top: 25px;margin-right: -70px; cursor: pointer;">'
+                    +                        '<p style="font-size: 25px;"><b>×</b></p>'
+                    +                    '</div>'
+                    +                '</div>'
+                    +            '</div>'
+                    +        '</div>'
+                    +    '</div>';
+            });
+            
+            $('#userImg_'+cardSeq).prepend(tag);
+            
+        },
+        error: function () {
+            alert('getProductTag error');
+        }
+    });
+}
+
+
+
+
+
 
 
 
